delete function add to the blog

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,400;1,300&family=Poppins:wght@300;700;900&display=swap');
-
 
 /* base styles */
 * {
@@ -10,6 +8,7 @@
   font-style: normal;
   color: #333;
 }
+
 .navbar {
   padding: 20px;
   display: flex;
@@ -18,27 +17,64 @@
   margin: 0 auto;
   border-bottom: 1px solid #f2f2f2;
 }
+
 .navbar h1 {
   color: #f1356d;
 }
+
 .navbar .links {
-  margin-left: 50%;
+  margin-left: auto; /* Adjusted */
   gap: 10px;
 }
+
 .navbar a {
-  margin-left: 16px;
   text-decoration: none;
   padding: 6px;
 }
+
 .navbar a:hover {
   color: #f1356d;
 }
+
 .content {
   max-width: 100%;
   margin: 40px auto;
   padding: 20px;
 }
 
+/* Media Queries */
+@media only screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
+  .navbar .links {
+    margin-left: 0;
+    margin-top: 20px;
+  }
 
+  .navbar a {
+    margin-left: 0;
+    display: block;
+  }
+  .navbar h1{
+    font-size: 1rem;
+  }
+}
 
+.blog-preview{
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 1px solid #fafafa;
+}
+
+.blog-preview:hover{
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.2);
+}
+
+.blog-preview h3{
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 8px;
+}
